--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,10 +35,10 @@ SET_TARGET_PROPERTIES(jwt PROPERTIES PUBLIC_HEADER "${JWT_HDR}")
 # Install targets.
 INSTALL(TARGETS jwt
         EXPORT JwtTargets
-        LIBRARY DESTINATION "${JWT_INSTALL_LIB_DIR}" COMPONENT lib
-        ARCHIVE DESTINATION "${JWT_INSTALL_LIB_DIR}" COMPONENT lib
-        RUNTIME DESTINATION "${JWT_INSTALL_BIN_DIR}" COMPONENT lib
-        PUBLIC_HEADER DESTINATION "${JWT_INSTALL_INCLUDE_DIR}/jwt" COMPONENT lib)
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
+        ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
+        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT lib
+        PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/jwt" COMPONENT lib)
 
 ADD_STYLE_CHECK_TARGET(lint "${JWT_SRC}")
 
@@ -46,11 +46,12 @@ set_property(TARGET jwt PROPERTY VERSION ${JWT_VERSION})
 set_property(TARGET jwt PROPERTY SOVERSION ${JWT_VERSION_MAJOR})
 set_property(TARGET jwt PROPERTY DEBUG_POSTFIX d)
 
+SET( CMAKECONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/Jwt )
 #Some boiler plate code to generate the cmake module files for Jwt
 install(EXPORT JwtTargets
     FILE JwtTargets.cmake
     NAMESPACE Jwt::
-    DESTINATION ${JWT_INSTALL_LIB_DIR}/cmake/Jwt
+    DESTINATION ${CMAKECONFIG_INSTALL_DIR}
 )
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file("JwtConfigVersion.cmake"
@@ -62,8 +63,9 @@ file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/JwtConfig.cmake" "
 include(\"\${CMAKE_CURRENT_LIST_DIR}/JwtTargets.cmake\")
 ")
 
+
 install(FILES
     ${CMAKE_CURRENT_BINARY_DIR}/JwtConfigVersion.cmake
     ${CMAKE_CURRENT_BINARY_DIR}/JwtConfig.cmake
-    DESTINATION ${JWT_INSTALL_LIB_DIR}/cmake/Jwt
+    DESTINATION ${CMAKECONFIG_INSTALL_DIR}
 )
